Update import and export data code

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# import libraries``"
+    "# import libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "dict1 = {\n",
     "    \"name\":['harry','rohan','skillf','shubh'],\n",
     "    \"marks\":['92','34','24','17'],\n",
-    "    \"city\":['rampur','kolkata','bareilly','antarctica']\n",
+    "    \"city\":['rampur','kolkata','bareilly','Mumbai']\n",
     "}"
    ]
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -109,21 +109,21 @@
        "      <th>3</th>\n",
        "      <td>shubh</td>\n",
        "      <td>17</td>\n",
-       "      <td>antarctica</td>\n",
+       "      <td>Mumbai</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     name marks        city\n",
-       "0   harry    92      rampur\n",
-       "1   rohan    34     kolkata\n",
-       "2  skillf    24    bareilly\n",
-       "3   shubh    17  antarctica"
+       "     name marks      city\n",
+       "0   harry    92    rampur\n",
+       "1   rohan    34   kolkata\n",
+       "2  skillf    24  bareilly\n",
+       "3   shubh    17    Mumbai"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,12 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export df to csv\n",
-    "df.to_csv('friends.csv',index=False)"
+    "import os\n",
+    "\n",
+    "# Define the folder path\n",
+    "folder_path = 'data'\n",
+    "\n",
+    "# Check if the folder exists, and if not, create it\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "\n",
+    "# Export the DataFrame to a CSV file within the \"data\" folder\n",
+    "df.to_csv(os.path.join(folder_path, 'friends_v2.csv'), index=False)\n",
+    "\n"
    ]
   },
   {
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +220,7 @@
        "1  rohan    34  kolkata"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -261,19 +271,19 @@
        "      <th>3</th>\n",
        "      <td>shubh</td>\n",
        "      <td>17</td>\n",
-       "      <td>antarctica</td>\n",
+       "      <td>Mumbai</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     name marks        city\n",
-       "2  skillf    24    bareilly\n",
-       "3   shubh    17  antarctica"
+       "     name marks      city\n",
+       "2  skillf    24  bareilly\n",
+       "3   shubh    17    Mumbai"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +367,7 @@
        "freq        1     1       1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -441,14 +451,15 @@
        "3      9845     17  antarctica"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# read a csv file\n",
-    "train_dataset = pd.read_csv('Trainnumber_data.csv')\n",
+    "datapath = 'C:\\VS Code\\pandas_on_git\\pandas_on_git\\Data'\n",
+    "\n",
+    "train_dataset = pd.read_csv(datapath + '\\Trainnumber_data.csv')\n",
     "train_dataset"
    ]
   },
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +485,7 @@
        "Name: Speed, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +506,7 @@
        "34"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,18 +524,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rohan\\AppData\\Local\\Temp\\ipykernel_9280\\2643452204.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rohan\\AppData\\Local\\Temp\\ipykernel_12488\\1667797716.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  train_dataset['Speed'][1] = 50\n"
+      "  train_dataset['Speed'][1] = 50  # we should not do this\n"
      ]
     }
    ],
@@ -535,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +612,7 @@
        "3      9845     17  antarctica"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +632,7 @@
        "50"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,11 +643,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset.to_csv('harry.csv')"
+    "import os\n",
+    "# Define the folder path\n",
+    "folder_path = 'data'\n",
+    "# Check if the folder exists, and if not, create it\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "# Export the DataFrame to a CSV file within the \"data\" folder\n",
+    "df.to_csv(os.path.join(folder_path, 'harry.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_dataset.to_csv('harry.csv')"
    ]
   },
   {
@@ -7256,16 +7283,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\VS Code\\\\pandas_on_git\\\\pandas_on_git\\\\Data'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df3 = pd.read_excel('DATA_ROUGH.xlsx', sheet_name='Sheet2')"
+    "datapath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = pd.read_excel(datapath+'\\DATA_ROUGH.xlsx', sheet_name='Sheet2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -7331,7 +7378,7 @@
        "3         9845        17  antarctica"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
